# openenv

./: .gitignore  Dockerfile  README.md  client.py  inference.py  models.py  pyproject.toml
server/: __init__.py  app.py  email_data.py  email_environment.py  tasks.py
